...
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="13dp"
        android:text="Back to Booking page" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
...
        android:textAlignment="center"
        android:textColor="#991B1E"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/futureBookingList"
        android:layout_width="match_parent"
        android:layout_height="523dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="104dp"
...
